# laborany

./: .env.example  .gitignore  BOSS.md  CLAUDE.md  HOMEPAGE_DISPATCH_SPEC.md  LEGACY_COMPAT_NOTES.md  LICENSE  MEMORY.md  MEMORY_DESIGN.md  README.md  build-windows-app.bat  package-lock.json  package.json
agent-service/: build.cjs  package-lock.json  package.json  pkg.json  test-api.mjs  test-skill.mjs  test-stream.mjs  tsconfig.json
backend/: pyproject.toml  test_api.py  test_db.py  test_register.py
backend/src/: __init__.py  main.py
backend/src/api/: auth.py  file.py  session.py  skill.py  task.py  workflow.py
backend/src/core/: database.py  security.py
backend/src/services/: agent_client.py  workflow_client.py
docs/: ai_labor_platform_v1.md  feishu-bot-spec.md  generative-ui-development-plan.md  generative-ui-rfc.md  homepage-dispatch-spec.md  memory-design.md  qq-bot-spec.md  release-notes-v0.4.5-wechat-bot.md  rfc-generative-ui.md  rfc-web-research-runtime.md  wechat-bot-spec.md
electron/: app-home.js  app-logger.js  error.html  main.js
ffmpeg-bundle-darwin-arm64/: README.md
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
scripts/: build-agent-pkg.js  build-node-bundle.js  build.sh  bundle-cli.js  bundle-git-bash.js  bundle-uv.js  clean-memory.js  e2e-phase2.sh  fetch-ffmpeg-bundles.mjs  fix-native-modules.js  install-all.js  (+13 more)
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/icons/android/values/: ic_launcher_background.xml
src-tauri/src/: lib.rs  main.rs
(+700 files in other folders)
